<resources>
    <string name="app_name">TheMovie</string>
    <string name="high_rated">High Rated</string>
    <string name="popular">Popular</string>
    <string name="favorite">Favorite</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="no_favorite">No favorites yet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>