<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue_navy"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="100dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/iv_cover"
            app:layout_constraintStart_toStartOf="@+id/iv_cover"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@+id/iv_poster"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            tools:text="@string/title"/>

        <ImageView
            android:id="@+id/iv_rating"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:contentDescription="@string/image"
            android:src="@drawable/baseline_star_rate_24"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="8dp"
            app:tint="@color/yellow"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/iv_rating"
            app:layout_constraintBottom_toBottomOf="@id/iv_rating"
            app:layout_constraintStart_toEndOf="@id/iv_rating"
            tools:text="@string/rating"/>

        <TextView
            android:id="@+id/tv_title_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            android:text="@string/release_date"
            />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_release"
            tools:text="@string/release_date"
            />

        <TextView
            android:id="@+id/tv_title_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
            android:text="@string/overview"
            />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_overview"
            tools:text="@string/overview"
            />

        <ToggleButton
            android:id="@+id/btn_favorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:textOn=""
            android:textOff=""
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@drawable/favorite_button"
            app:layout_constraintBottom_toBottomOf="@+id/iv_cover"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/progressBarStyle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>